feature: new resume version has been added and some label issues

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -25,19 +25,19 @@ const ankerNav =
     <article class="wrapperModalCV">
       <a
         class={ankerCVBtn}
-        href="/assets/valenciaarcega-cv-es.pdf"
-        download="valenciaarcega-cv-es.pdf"
+        href="/assets/resume-es.pdf"
+        download="resume-es.pdf"
       >
         <FlagMX />
-        Versión en Español
+        Version - Spanish
       </a>
       <a
         class={ankerCVBtn}
-        href="/assets/valenciaarcega-cv-en.pdf"
-        download="valenciaarcega-cv-en.pdf"
+        href="/assets/resume-en.pdf"
+        download="resume-en.pdf"
       >
         <FlagUS />
-        English version
+        Version - English
       </a>
     </article>
 
