--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,13 @@
 ---
-import Welcome from "../components/Welcome.astro";
-import Knowledges from "../components/Knowledges.astro";
+import { ExperienceJSX } from "@src/components/Experience";
 import "../App.css";
-import Projects from "../components/Projects.astro";
 import Experience from "../components/Experience.astro";
 import Footer from "../components/Footer.astro";
+import Knowledges from "../components/Knowledges.astro";
 import Navbar from "../components/Navbar.astro";
+import Projects from "../components/Projects.astro";
 import Topbar from "../components/Topbar.astro";
+import Welcome from "../components/Welcome.astro";
 ---
 
 <html lang="en">
@@ -35,6 +36,7 @@ import Topbar from "../components/Topbar.astro";
     <Knowledges />
     <Projects />
     <Experience />
+    <!-- <ExperienceJSX /> -->
     <Footer />
     <Navbar />
     <Topbar />
