--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,25 +1,27 @@
----
-import "../css/Footer.css";
----
-
-<!-- Footer -->
-<footer class="footerApp">
+<footer class="h-20 mt-52 mb-5 flex flex-col items-center justify-center">
   <main>
     <a
+      class="decoration-transparent"
       target="_blank"
       href="https://www.linkedin.com/in/luis-angel-valencia-arcega-4827b9239"
     >
-      <img src="./footer/icon_footer_linkedin.svg" alt="linkedin logo" />
+      <img
+        class="w-11"
+        src="./footer/icon_footer_linkedin.svg"
+        alt="linkedin logo"
+      />
     </a>
-    <a target="_blank" href="https://github.com/ValenciaArcega">
-      <img src="./footer/icon_footer_github.svg" alt="gtihub logo" />
+    <a
+      class="decoration-transparent"
+      target="_blank"
+      href="https://github.com/ValenciaArcega"
+    >
+      <img
+        class="w-11"
+        src="./footer/icon_footer_github.svg"
+        alt="gtihub logo"
+      />
     </a>
-    <!-- <a target="_blank" href="https://www.instagram.com/valencia.arcega/">
-      <img src="./footer/icon_footer_instagram.svg" alt="instagram logo" />
-    </a>
-    <a target="_blank" href="https://www.facebook.com/valencia.arcega">
-      <img src="./footer/icon_footer_facebook.svg" alt="facebook logo" />
-    </a> -->
   </main>
-  <p>2025. Valencia Arcega</p>
+  <p class="mt-2 text-base">2025. Valencia Arcega</p>
 </footer>
