--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,9 +1,8 @@
 ---
 import "../css/Projects.css";
 import "../css/Slider.css";
-import Rocket from "./icons/Rocket.astro";
-import Star from "./icons/Star.astro";
 import { IconReact } from "./icons/technologies";
+import { Project } from "./projects/Project";
 
 type ImagesReactNative = {
   uri: string;
@@ -65,12 +64,11 @@ const reactNativeImages: ImagesReactNative[] = [
 ];
 ---
 
-<section class="container-knowledgesCards" id="sp">
-  <section class="sectionKnowledges">
-    <!--  <h1 class="projects-h1">
-      My personal <span class="textBlue-onBlack">projects</span>.
-    </h1> -->
-
+<section class="mt-56 flex flex-col justify-center items-center" id="sp">
+  <section
+    class="w-full min-h-[60rem] px-0 pt-12 pb-32 flex gap-y-8 flex-col items-center justify-center bg-[#101010]"
+    style="container-type: inline-size;"
+  >
     <section class="wrapperGradientTitle">
       <div class="pocketCards">
         <div class="pocketCardFirst">
@@ -104,54 +102,29 @@ const reactNativeImages: ImagesReactNative[] = [
       <h1>Projects</h1>
     </section>
 
-    <article class="cardKnowledges">
-      <div class="cardKnowledgesBorder"></div>
-      <!-- <div class="cardKnowledgesBg"></div> -->
+    <article
+      class="h-[80%] py-[4.4rem] pb-0 relative grid gap-x-[1rem] gap-y-[2.2rem] grid-cols-[repeat(auto-fit,_minmax(21rem,_1fr))] w-full items-center justify-items-center bg-gradient-to-t from-[#101010] to-[#151515]"
+    >
+      <div
+        class="absolute left-1/2 top-0 w-[90%] h-[1px] select-none pointer-events-none -translate-x-1/2 bg-gradient-to-r from-transparent via-[rgba(198,198,198,0.67)] to-transparent"
+      >
+      </div>
 
-      <article class="projectMain">
-        <img src="./fare-logo.svg" alt="Fare web site logo" width="64" />
-        <p>
-          <span>Fare</span> it is a website to save your ideas. Easy, clean and fast.
-        </p>
+      <Project
+        description="it is a website to save your ideas. Easy, clean and fast"
+        urlImage="./fare-logo.svg"
+        name="Fare"
+        urlSite="https://valenciaarcega.github.io/fare/"
+        urlRepo="https://github.com/ValenciaArcega/fare"
+      />
 
-        <footer class="wrapperBtnsProjectMain">
-          <a
-            class="ankerDiscover"
-            target="_blank"
-            href="https://valenciaarcega.github.io/fare/"
-          >
-            <Rocket />
-            Discover Fare</a
-          >
-          <a target="_blank" href="https://github.com/ValenciaArcega/fare"
-            >Give <Star /> in Github</a
-          >
-        </footer>
-      </article>
-
-      <article class="projectMain">
-        <img
-          src="./tolescro-logo.svg"
-          alt="Tolescro web site logo"
-          width="64"
-        />
-        <p>
-          <span>Tolescro</span> it is a website to learn English with cards.
-        </p>
-
-        <footer class="wrapperBtnsProjectMain">
-          <a
-            class="ankerDiscover"
-            target="_blank"
-            href="https://valenciaarcega.github.io/tolescro/"
-          >
-            <Rocket />Discover Tolescro</a
-          >
-          <a target="_blank" href="https://github.com/ValenciaArcega/tolescro"
-            >Give <Star />in Github</a
-          >
-        </footer>
-      </article>
+      <Project
+        description="it is a website to learn English with cards"
+        urlImage="./tolescro-logo.svg"
+        name="Tolescro"
+        urlSite="https://valenciaarcega.github.io/tolescro/"
+        urlRepo="https://github.com/ValenciaArcega/tolescro"
+      />
     </article>
   </section>
 </section>
