--- a/src/css/Slider.css
+++ b/src/css/Slider.css
@@ -1,51 +1,52 @@
 .slider {
-	position: absolute;
-	min-width: 300px;
-	min-height: 600px;
-	padding-top: 1rem;
-	padding-bottom: 1rem;
-	top: 10%;
-	left: calc(50% - 150px);
-	transform-style: preserve-3d;
-	transform: perspective(5000px);
-	animation: autoRun 60s linear infinite;
+  position: absolute;
+  min-width: 300px;
+  min-height: 600px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  top: 10%;
+  left: calc(50% - 150px);
+  transform-style: preserve-3d;
+  transform: perspective(5000px);
+  animation: autoRun 60s linear infinite;
 }
 
 @keyframes autoRun {
-	from {
-		transform: perspective(5000px) rotateX(-12deg) rotateY(360deg);
-	}
+  from {
+    transform: perspective(5000px) rotateX(-12deg) rotateY(360deg);
+  }
 
-	to {
-		transform: perspective(5000px) rotateX(-12deg) rotateY(0deg);
-	}
+  to {
+    transform: perspective(5000px) rotateX(-12deg) rotateY(0deg);
+  }
 }
 
 @keyframes autoRunMobile {
-	from {
-		transform: perspective(5000px) rotateX(0deg) rotateY(360deg);
-	}
+  from {
+    transform: perspective(5000px) rotateX(0deg) rotateY(360deg);
+  }
 
-	to {
-		transform: perspective(5000px) rotateX(0deg) rotateY(0deg);
-	}
+  to {
+    transform: perspective(5000px) rotateX(0deg) rotateY(0deg);
+  }
 }
 
 @media (max-width: 732px) {
-	.slider {
-		animation: autoRunMobile 60s linear infinite;
-	}
+  .slider {
+    animation: autoRunMobile 60s linear infinite;
+  }
 }
 
 .slider .item {
-	position: absolute;
-	inset: 0;
-	transform:
-		rotateY(calc((var(--position) - 1) * (360 / var(--quantity))* 1deg)) translateZ(600px);
+  position: absolute;
+  inset: 0;
+  transform: rotateY(
+      calc((var(--position) - 1) * (360 / var(--quantity)) * 1deg)
+    )
+    translateZ(600px);
 }
 
 .slider .item img {
-	width: 100%;
-	height: 100%;
-
+  width: 100%;
+  height: 100%;
 }
