refactor:: Update layout and styling for Projects and Knowledges components; remove unused CSS and improve accessibility as new Tailwind classes

--- a/src/components/Knowledges.astro
+++ b/src/components/Knowledges.astro
@@ -18,7 +18,7 @@ import {
   </div>
 
   <section class="wrapperSkills">
-    <div class="pocketCards">
+    <div class="my-8 flex flex-row gap-4 relative">
       <div class="pocketCardFirstKnowledge"></div>
       <div class="pocketCardThirdKnowledge"></div>
       <div class="pocketCardKnowledge">
