--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -70,7 +70,7 @@ const reactNativeImages: ImagesReactNative[] = [
     style="container-type: inline-size;"
   >
     <section class="wrapperGradientTitle">
-      <div class="pocketCards">
+      <div class="my-8 flex flex-row gap-4 relative">
         <div class="pocketCardFirst">
           <svg viewBox="0 0 24 24" fill="#aaa" height="32">
             <path
@@ -159,11 +159,13 @@ const reactNativeImages: ImagesReactNative[] = [
   </main>
 </section>
 
-<section class="containerProjects">
-  <h2 class="projects-h2">
-    The <span class="textBlue-onBlack">big ones</span>.
+<section class="flex flex-col pb-16 bg-[#101010]">
+  <h2 class="mt-16 tracking-[-1px] text-5xl text-center text-white">
+    The <span class="text-[#a0b0ef]">big ones</span>.
   </h2>
-  <p>UI's built with React and vanilla CSS.</p>
+  <p class="mt-2 text-lg text-center text-gray-400">
+    Web apps built with React and CSS (Tailwind & vanilla).
+  </p>
 
   <section class="wrapperSlider">
     <aside class="sideLeftBlur"></aside>
