--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-import { ExperienceJSX } from "@src/components/Experience";
 import "../App.css";
 import Experience from "../components/Experience.astro";
 import Footer from "../components/Footer.astro";
@@ -18,25 +17,18 @@ import Welcome from "../components/Welcome.astro";
     <link rel="icon" type="image/svg+xml" href="./favicon.webp" />
     <meta
       name="description"
-      content="This is my portfolio, that can help people that is interested in to know who I am, where I studied, also some of my skills and projects that I had developed."
+      content="This is my portfolio, see who I am, where I studied, also some of my skills and projects that I had been developed."
     />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <title>ValenciaArcega &mdash; Portfolio</title>
+
+    <title>Valencia Arcega &mdash; Portfolio</title>
   </head>
   <body>
     <Welcome />
     <Knowledges />
     <Projects />
     <Experience />
-    <!-- <ExperienceJSX /> -->
     <Footer />
     <Navbar />
     <Topbar />
