--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -163,7 +163,7 @@ const reactNativeImages: ImagesReactNative[] = [
   <h2 class="mt-16 tracking-[-1px] text-5xl text-center text-white">
     The <span class="text-[#a0b0ef]">big ones</span>.
   </h2>
-  <p class="mt-2 text-lg text-center text-gray-400">
+  <p class="mt-2 px-6 text-lg text-center text-gray-400">
     Web apps built with React and CSS (Tailwind & vanilla).
   </p>
 
@@ -217,7 +217,9 @@ const reactNativeImages: ImagesReactNative[] = [
     <aside class="sideRightBlur"></aside>
   </section>
 
-  <p style="padding-top: 4rem;">UI's built in Java with Swing and AWT.</p>
+  <p class="mt-6 px-6 text-lg text-center text-gray-400">
+    UI's built in Java with Swing and AWT.
+  </p>
 
   <section class="wrapperSlider">
     <aside class="sideLeftBlur"></aside>
