01 - Main photo now contains a rounded effect. Some adjustments to the navigation bar related with resume file and border height. Also an interface of routine has been deleted.

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -65,7 +65,7 @@ const gradientCard =
       <p class={txtTitle}>Current job</p>
       <h3 class={txtDesc}>BAACC Systems</h3>
       <p class={txtFooter}>
-        <span class={emphasis}>1</span> year and 7 months as Frontend developer.
+        <span class={emphasis}>1</span> year and 10 months as Software Engineer.
       </p>
     </article>
 
