03 - Some useless assets had been gone. Also some basic text descriptions had been changed.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import Welcome from "../components/Welcome.astro";
     <link rel="icon" type="image/svg+xml" href="./favicon.webp" />
     <meta
       name="description"
-      content="This is my portfolio, see who I am, where I studied, also some of my skills and projects that I had been developed."
+      content="My portfolio. Who I am, where I studied, some of my skills and projects that I had been developed."
     />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
@@ -33,6 +33,6 @@ import Welcome from "../components/Welcome.astro";
     <Navbar />
     <Topbar />
 
-    <script src="../functions/appearance.js"></script>
+    <script src="../utils/appearance.ts"></script>
   </body>
 </html>
