--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -22,7 +22,7 @@ const gradientCard =
   id="ss"
 >
   <h1 class="tracking-[-1px] text-5xl text-center">
-    Education <span class="textBlue"> & </span>Experience.
+    Education <span class="text-p500 dark:text-p100"> & </span>Experience.
   </h1>
   <p class="text-center text-gray-500 leading-7">
     Where study and experience are <span class="text-black dark:text-white"
