--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -37,7 +37,7 @@ import { IconReact, IconTailwind, IconTypescript } from "./icons/technologies";
 >
   <article class="w-[35rem] flex flex-col gap-2 justify-center items-center">
     <div
-      class={`h-[182px] w-[182px] bg-contain bg-[url("../../public/user.webp")] relative rounded-[30%_70%_24%76%/_65%_28%_72%_35%] welcomeUserImg`}
+      class={`h-[182px] w-[182px] bg-contain bg-[url("/user.webp")] relative rounded-[30%_70%_24%76%/_65%_28%_72%_35%] welcomeUserImg`}
     >
       <div class="absolute bottom-4 left-0 -translate-x-1/2 top-auto">
         <div class="bubble shadow-[4px_4px_8px_1px_#0000003d]">
